# sadl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  pyproject.toml
.github/workflows/: ci_cd.yaml
docs/: ABOUT.md  API_REFERENCE.md  BACKEND.md  COMPUTATION_GRAPH.md  CONCEPT.md  DEVICE.md  DISK.md  FUNCTION.md  GETTING_STARTED.md  GET_STARTED.md  OPTIMIZER.md  TENSOR.md
docs/autograd/: AUTOGRAD.md  BACKPROPAGATION.md  COMPUTATION_GRAPH.md  GRADIENTS.md  NODES.md
notebooks/: mnist_demo.ipynb
sadl/: __init__.py  backend.py  disk.py  dispatch.py  function.py  grad_mode.py  grad_ops.py  ops.py  optimizer.py  tensor.py  utils.py
sadl/backend/: __init__.py  array_provider.py  backend.py  device.py  dtype.py  grad_mode.py  grad_ops.py  ops.py  random.py  utils.py
src/: __init__.py  grad_ops.py  optimizer.py  tensor.py  utils.py
tests/: test_dummy.py  test_grad_ops.py  test_install.sh  verify_install.py
